--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,26 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite App</title>
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="#" sizes="any">
+    <link rel="icon" href="#" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="#">
+
+    <title>Document</title>
+    <meta name="description" content="">
+
+    <meta property="og:type" content="">
+    <meta property="og:url" content="">
+    <meta property="og:image" content="">
+
+    <link rel="stylesheet" href="#">
 </head>
 
 <body>
-  <div id="app"></div>
-  <script type="module" src="/js/main.js"></script>
+
 </body>
 
 </html>
