add running line

--- a/src/index.html
+++ b/src/index.html
@@ -91,7 +91,7 @@
     <section class="hero">
       <div class="container">
         <div class="hero__content">
-          <div class="hero__description">
+          <div class="hero__description hero__scale-left">
             <h1 class="hero__title">Школа<br>
               <span class="hero__title--black">волейбола</span>
               <br>
@@ -102,19 +102,19 @@
             </p>
             <button class="btn hero__btn">Записаться на тренировку</button>
           </div>
-          <div class="hero__picture">
+          <div class="hero__picture hero__scale-right">
             <div class="hero__picture-top">
               <img src="images/hero-2.jpg" alt="hero" class="hero__img hero__img-top">
             </div>
           </div>
         </div>
         <div class="hero__content">
-          <div class="hero__picture">
+          <div class="hero__picture hero__scale-left">
             <div class="hero__picture-bottom">
               <img src="images/hero-1.jpg" alt="hero" class="hero__img hero__img-bottom">
             </div>
           </div>
-          <div class="hero__description">
+          <div class="hero__description hero__scale-right">
             <p class="hero__text">Panam Ba - это отличная возможность
               для учиться играть, тренироваться, совершенствовать и оттачивать свои спортивные навыки, а так же
               развивать
@@ -123,6 +123,66 @@
               от возраста и уровня подготовки.</p>
           </div>
         </div>
+      </div>
+    </section>
+    <section class="runline">
+
+      <div class="runline__row">
+        <div class="runline__line runline__line--left">
+          <p class="runline__text runline__text--yellow">Крутые кемпы</p>
+          <p class="runline__text runline__text--blue">Большое коммьюнити</p>
+          <p class="runline__text runline__text--green">Опытные тренеры</p>
+          <p class="runline__text runline__text--black">Выгодные цены</p>
+        </div>
+        <div class="runline__line runline__line--left">
+          <p class="runline__text runline__text--yellow">Крутые кемпы</p>
+          <p class="runline__text runline__text--blue">Большое коммьюнити</p>
+          <p class="runline__text runline__text--green">Опытные тренеры</p>
+          <p class="runline__text runline__text--black">Выгодные цены</p>
+        </div>
+      </div>
+      <div class="runline__row">
+        <div class="runline__line runline__line--right">
+          <p class="runline__text runline__text--black">Выгодные цены</p>
+          <p class="runline__text runline__text--blue">Большое коммьюнити</p>
+          <p class="runline__text runline__text--green">Крутые кемпы</p>
+          <p class="runline__text runline__text--yellow">Опытные тренеры</p>
+        </div>
+        <div class="runline__line runline__line--right">
+          <p class="runline__text runline__text--black">Выгодные цены</p>
+          <p class="runline__text runline__text--blue">Большое коммьюнити</p>
+          <p class="runline__text runline__text--green">Крутые кемпы</p>
+          <p class="runline__text runline__text--yellow">Опытные тренеры</p>
+        </div>
+      </div>
+      <div class="runline__row">
+        <div class="runline__line runline__line--left">
+          <p class="runline__text runline__text--black">Крутые кемпы</p>
+          <p class="runline__text runline__text--green">Большое коммьюнити</p>
+          <p class="runline__text runline__text--blue">Опытные тренеры</p>
+          <p class="runline__text runline__text--yellow">Турниры и игры</p>
+        </div>
+        <div class="runline__line runline__line--left">
+          <p class="runline__text runline__text--black">Крутые кемпы</p>
+          <p class="runline__text runline__text--green">Большое коммьюнити</p>
+          <p class="runline__text runline__text--blue">Опытные тренеры</p>
+          <p class="runline__text runline__text--yellow">Турниры и игры</p>
+        </div>
+      </div>
+      <div class="runline__row">
+        <div class="runline__line runline__line--right">
+          <p class="runline__text runline__text--yellow">Опытные тренеры</p>
+          <p class="runline__text runline__text--black">Турниры и игры</p>
+          <p class="runline__text runline__text--blue">Крутые кемпы</p>
+          <p class="runline__text runline__text--yellow">Большое коммьюнити</p>
+        </div>
+        <div class="runline__line runline__line--right">
+          <p class="runline__text runline__text--yellow">Опытные тренеры</p>
+          <p class="runline__text runline__text--black">Турниры и игры</p>
+          <p class="runline__text runline__text--blue">Крутые кемпы</p>
+          <p class="runline__text runline__text--yellow">Большое коммьюнити</p>
+        </div>
+      </div>
       </div>
     </section>
   </main>
