--- a/src/index.html
+++ b/src/index.html
@@ -185,6 +185,135 @@
       </div>
       </div>
     </section>
+    <section class="train">
+      <div class="container">
+        <h2 class="train__title">тренировки</h2>
+        <div class="train__content">
+          <div class="train__card card">
+            <div class="card__content">
+              <div class="card__image-block">
+                <div class="card__swiper swiper-train">
+                  <div class="swiper-wrapper swiper-train__wrapper">
+                    <div class="swiper-slide swiper-train__slide">
+                      <div class="swiper-train__content">
+                        <img src="./images/hero-1.jpg" alt="" class="swiper-train__image">
+                      </div>
+                    </div>
+                    <div class="swiper-slide swiper-train__slide">
+                      <div class="swiper-train__content">
+                        <img src="./images/hero-2.jpg" alt="" class="swiper-train__image">
+                      </div>
+                    </div>
+                    <div class="swiper-slide swiper-train__slide">
+                      <div class="swiper-train__content">
+                        <img src="./images/hero-1.jpg" alt="" class="swiper-train__image">
+                      </div>
+                    </div>
+                    <div class="swiper-slide swiper-train__slide">
+                      <div class="swiper-train__content">
+                        <img src="./images/hero-2.jpg" alt="" class="swiper-train__image">
+                      </div>
+                    </div>
+                    <div class="swiper-slide swiper-train__slide">
+                      <div class="swiper-train__content">
+                        <img src="./images/hero-1.jpg" alt="" class="swiper-train__image">
+                      </div>
+                    </div>
+                    <div class="swiper-slide swiper-train__slide">
+                      <div class="swiper-train__content">
+                        <img src="./images/hero-2.jpg" alt="" class="swiper-train__image">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="swiper-train__pagination-wrapper">
+                    <div class="swiper-pagination swiper-train__pagination"></div>
+                  </div>
+                </div>
+              </div>
+              <div class="card__description">
+                <h4 class="card__title"><span class="card__subtitle">Пляжный </span>
+                  для детей</h4>
+                <p class="card__text">Мы предлагаем мальчикам и девочкам от 8 до 16 лет стать частью дружной
+                  волейбольной команды.</p>
+                <ul class="card__list">
+                  <li class="card__item">Не требует предварительных навыков</li>
+                  <li class="card__item">Четкая программа под возраст</li>
+                  <li class="card__item">Развитие физической подготовки</li>
+                  <li class="card__item">Насыщенные и увлекательные тренировки</li>
+                </ul>
+                <p class="card__text card__price"><span class="card__price--bold">Абонемент:</span> 1 месяц - от 100 ₾
+                </p>
+              </div>
+            </div>
+            <div class="card__cta">
+              <button class="card__btn btn">Записаться</button>
+              <button class="card__btn btn">Расписание</button>
+            </div>
+          </div>
+
+          <div class="train__card card">
+            <div class="card__content">
+              <div class="card__image-block">
+                <div class="card__swiper swiper-train">
+                  <div class="swiper-wrapper swiper-train__wrapper">
+                    <div class="swiper-slide swiper-train__slide">
+                      <div class="swiper-train__content">
+                        <img src="./images/hero-1.jpg" alt="" class="swiper-train__image">
+                      </div>
+                    </div>
+                    <div class="swiper-slide swiper-train__slide">
+                      <div class="swiper-train__content">
+                        <img src="./images/hero-2.jpg" alt="" class="swiper-train__image">
+                      </div>
+                    </div>
+                    <div class="swiper-slide swiper-train__slide">
+                      <div class="swiper-train__content">
+                        <img src="./images/hero-1.jpg" alt="" class="swiper-train__image">
+                      </div>
+                    </div>
+                    <div class="swiper-slide swiper-train__slide">
+                      <div class="swiper-train__content">
+                        <img src="./images/hero-2.jpg" alt="" class="swiper-train__image">
+                      </div>
+                    </div>
+                    <div class="swiper-slide swiper-train__slide">
+                      <div class="swiper-train__content">
+                        <img src="./images/hero-1.jpg" alt="" class="swiper-train__image">
+                      </div>
+                    </div>
+                    <div class="swiper-slide swiper-train__slide">
+                      <div class="swiper-train__content">
+                        <img src="./images/hero-2.jpg" alt="" class="swiper-train__image">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="swiper-train__pagination-wrapper">
+                    <div class="swiper-pagination swiper-train__pagination"></div>
+                  </div>
+                </div>
+              </div>
+              <div class="card__description">
+                <h4 class="card__title"><span class="card__subtitle">Пляжный</span>для детей</h4>
+                <p class="card__text">Мы предлагаем мальчикам и девочкам от 8 до 16 лет стать частью дружной
+                  волейбольной команды.</p>
+                <ul class="card__list">
+                  <li class="card__item">Не требует предварительных навыков</li>
+                  <li class="card__item">Четкая программа под возраст</li>
+                  <li class="card__item">Развитие физической подготовки</li>
+                  <li class="card__item">Насыщенные и увлекательные тренировки</li>
+                </ul>
+                <p class="card__text card__price"><span class="card__price--bold">Абонемент:</span> 1 месяц - от 100 ₾
+                </p>
+              </div>
+            </div>
+            <div class="card__cta">
+              <button class="card__btn btn">Записаться</button>
+              <button class="card__btn btn">Расписание</button>
+            </div>
+          </div>
+
+        </div>
+    </section>
   </main>
 
 
