add labels to train cards

--- a/src/index.html
+++ b/src/index.html
@@ -193,6 +193,7 @@
           <div class="train__card card">
             <div class="card__content">
               <div class="card__image-block">
+                <span class="card__label">Пробная тренировка 10 ₾</span>
                 <div class="card__swiper swiper-train">
                   <div class="swiper-wrapper swiper-train__wrapper">
                     <div class="swiper-slide swiper-train__slide">
@@ -255,6 +256,7 @@
           <div class="train__card card">
             <div class="card__content">
               <div class="card__image-block">
+                <span class="card__label">Пробная тренировка 10 ₾</span>
                 <div class="card__swiper swiper-train">
                   <div class="swiper-wrapper swiper-train__wrapper">
                     <div class="swiper-slide swiper-train__slide">
@@ -314,9 +316,11 @@
               <button class="card__btn btn">Расписание</button>
             </div>
           </div>
+
           <div class="train__card card">
             <div class="card__content">
               <div class="card__image-block">
+                <span class="card__label">Пробная тренировка 10 ₾</span>
                 <div class="card__swiper swiper-train">
                   <div class="swiper-wrapper swiper-train__wrapper">
                     <div class="swiper-slide swiper-train__slide">
@@ -379,6 +383,7 @@
           <div class="train__card card">
             <div class="card__content">
               <div class="card__image-block">
+                <span class="card__label">Пробная тренировка 10 ₾</span>
                 <div class="card__swiper swiper-train">
                   <div class="swiper-wrapper swiper-train__wrapper">
                     <div class="swiper-slide swiper-train__slide">
