add camps block

--- a/src/index.html
+++ b/src/index.html
@@ -187,7 +187,7 @@
     </section>
     <section class="train">
       <div class="container">
-        <h2 class="train__title">тренировки</h2>
+        <h2 class="train__title title">тренировки</h2>
         <div class="train__content">
 
           <div class="train__card card">
@@ -445,6 +445,31 @@
           </div>
 
         </div>
+    </section>
+    <section class="camps">
+      <div class="container camps__container">
+        <div class="camps__content">
+          <h2 class="camps__title title">кемпы</h2>
+          <p class="camps__text text">Клуб пляжного волейбола организовывает лагеря
+            и тренировочные сборы по пляжному волейболу.
+            Это может быть интересно, во-первых, тем, кому наскучил привычный отдых и есть желание совместить приятное с
+            полезным. </p>
+          <p class="camps__text text">И, во-вторых, тем, кто хочет поднять уровень своего спортивного мастерства и
+            физических кондиций.</p>
+
+          <button class="camps__btn btn">Смотреть анонсы</button>
+        </div>
+        <div class="camps__image-block">
+          <div class="camps__image-wrapper">
+            <img src="images/hero-2.jpg" alt="hero" class="camps__image">
+          </div>
+        </div>
+        <p class="camps__message">115 человек провели с нами свой отпуск и доверили
+          свою подготовку</p>
+        <div class="camps__slider">
+          <img src="images/hero-2.jpg" alt="hero" class="camps__">
+        </div>
+      </div>
     </section>
   </main>
 
