add camps slider

--- a/src/index.html
+++ b/src/index.html
@@ -466,8 +466,43 @@
         </div>
         <p class="camps__message">115 человек провели с нами свой отпуск и доверили
           свою подготовку</p>
-        <div class="camps__slider">
-          <img src="images/hero-2.jpg" alt="hero" class="camps__">
+        <div class="camps__slider camps-swiper">
+          <div class="swiper camps-swiper__swiper">
+            <div class="swiper-wrapper camps-swiper__wrapper">
+
+              <div class="swiper-slide camps-swiper__slide">
+                <div class="camps-swiper__image-wrapper">
+                  <img src="images/hero-2.jpg" alt="hero" class="camps-swiper__image">
+                </div>
+              </div>
+
+              <div class="swiper-slide camps-swiper__slide">
+                <div class="camps-swiper__image-wrapper">
+                  <img src="images/hero-1.jpg" alt="hero" class="camps-swiper__image">
+                </div>
+              </div>
+
+              <div class="swiper-slide camps-swiper__slide">
+                <div class="camps-swiper__image-wrapper">
+                  <img src="images/hero-2.jpg" alt="hero" class="camps-swiper__image">
+                </div>
+              </div>
+
+              <div class="swiper-slide camps-swiper__slide">
+                <div class="camps-swiper__image-wrapper">
+                  <img src="images/hero-1.jpg" alt="hero" class="camps-swiper__image">
+                </div>
+              </div>
+
+            </div>
+
+            <div class="camps-swiper__pagination-wrapper">
+              <div class="swiper-pagination camps-swiper__pagination"></div>
+            </div>
+            <div class="swiper-button-next camps-swiper__button camps-swiper__button-next"></div>
+            <div class="swiper-button-prev camps-swiper__button camps-swiper__button-prev"></div>
+          </div>
+
         </div>
       </div>
     </section>
