--- a/src/index.html
+++ b/src/index.html
@@ -185,7 +185,7 @@
       </div>
       </div>
     </section>
-    <section class="train">
+    <section class="section train">
       <div class="container">
         <h2 class="train__title title">тренировки</h2>
         <div class="train__content">
@@ -446,7 +446,7 @@
 
         </div>
     </section>
-    <section class="camps">
+    <section class="section camps">
       <div class="container camps__container">
         <div class="camps__content">
           <h2 class="camps__title title">кемпы</h2>
@@ -504,6 +504,184 @@
           </div>
 
         </div>
+      </div>
+    </section>
+    <section class="service">
+
+      <div class="container">
+
+      </div>
+
+      <div class="service__container">
+        <h2 class="service__title title">услуги</h2>
+
+        <div class="service__swiper swiper-service">
+          <div class="swiper-wrapper swiper-service__wrapper">
+
+            <div class="swiper-slide swiper-service__slide">
+              <div class="swiper-service__body">
+                <div class="swiper-service__image-wrapper">
+                  <ul class="scroll-snap-slider">
+                    <li class="scroll-snap-slide">
+                      <img alt="" src="https://picsum.photos/id/1011/1400/800" />
+                    </li>
+                    <li class="scroll-snap-slide">
+                      <img alt="" src="https://picsum.photos/id/1012/1400/800" />
+                    </li>
+                    <li class="scroll-snap-slide">
+                      <img alt="" src="https://picsum.photos/id/1013/1400/800" />
+                    </li>
+                    <li class="scroll-snap-slide">
+                      <img alt="" src="https://picsum.photos/id/1014/1400/800" />
+                    </li>
+                  </ul>
+                </div>
+                <div class="swiper-service__content">
+                  <div class="swiper-service__content-cell">
+                    <h3 class="swiper-service__title">Аренда пляжных кортов</h3>
+                  </div>
+                  <div class="swiper-service__content-cell">
+                    <p class="swiper-service__text text">Арендуй уютный и качественный волейбольный корт для игры с
+                      друзьями
+                      или тренировок. Мы предлагаем классное место для ваших игр. Аренда волейбольного корта в нашем
+                      клубе - это ваш шанс ощутить азарт и бросить вызов друзьям.</p>
+
+                    <ul class="swiper-service__list">
+                      <li class="swiper-service__list-item text">Удобное расположение</li>
+                      <li class="swiper-service__list-item text">Гибкий график</li>
+                      <li class="swiper-service__list-item text">Приятные цены</li>
+                    </ul>
+
+                    <p class="swiper-service__text text">Забронируйте свой корт сегодня и перенесите вашу игру на новый
+                      уровень!</p>
+                  </div>
+                  <div class="swiper-service__content-cell">
+                    <h6 class="swiper-service__subheading">Маленький корт</h6>
+                    <p class="text swiper-service__text">Будни утро и день:<br>40 ₾</p>
+                    <p class="text swiper-service__text">Вечер с 18:00 и выходные:<br>45 ₾</p>
+                  </div>
+                  <div class="swiper-service__content-cell">
+                    <h6 class="swiper-service__subheading">Большой корт</h6>
+                    <p class="text swiper-service__text">Будни утро и день:<br>40 ₾</p>
+                    <p class="text swiper-service__text">Вечер с 18:00 и выходные:<br>45 ₾</p>
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-service__footer">
+                <button class="btn swiper-service__btn">Записаться на тренировку</button>
+              </div>
+            </div>
+
+            <div class="swiper-slide swiper-service__slide">
+              <div class="swiper-service__body">
+                <div class="swiper-service__image-wrapper">
+                  <ul class="scroll-snap-slider">
+                    <li class="scroll-snap-slide">
+                      <img alt="" src="https://picsum.photos/id/1011/1400/800" />
+                    </li>
+                    <li class="scroll-snap-slide">
+                      <img alt="" src="https://picsum.photos/id/1012/1400/800" />
+                    </li>
+                    <li class="scroll-snap-slide">
+                      <img alt="" src="https://picsum.photos/id/1013/1400/800" />
+                    </li>
+                    <li class="scroll-snap-slide">
+                      <img alt="" src="https://picsum.photos/id/1014/1400/800" />
+                    </li>
+                  </ul>
+                </div>
+                <div class="swiper-service__content">
+                  <div class="swiper-service__content-cell">
+                    <h3 class="swiper-service__title">Аренда пляжных кортов</h3>
+                  </div>
+                  <div class="swiper-service__content-cell">
+                    <p class="swiper-service__text text">Арендуй уютный и качественный волейбольный корт для игры с
+                      друзьями
+                      или тренировок. Мы предлагаем классное место для ваших игр. Аренда волейбольного корта в нашем
+                      клубе - это ваш шанс ощутить азарт и бросить вызов друзьям.</p>
+
+                    <ul class="swiper-service__list">
+                      <li class="swiper-service__list-item text">Удобное расположение</li>
+                      <li class="swiper-service__list-item text">Гибкий график</li>
+                      <li class="swiper-service__list-item text">Приятные цены</li>
+                    </ul>
+
+                    <p class="swiper-service__text text">Забронируйте свой корт сегодня и перенесите вашу игру на новый
+                      уровень!</p>
+                  </div>
+                  <div class="swiper-service__content-cell">
+                    <h6 class="swiper-service__subheading">Маленький корт</h6>
+                    <p class="text swiper-service__text">Будни утро и день:<br>40 ₾</p>
+                    <p class="text swiper-service__text">Вечер с 18:00 и выходные:<br>45 ₾</p>
+                  </div>
+                  <div class="swiper-service__content-cell">
+                    <h6 class="swiper-service__subheading">Большой корт</h6>
+                    <p class="text swiper-service__text">Будни утро и день:<br>40 ₾</p>
+                    <p class="text swiper-service__text">Вечер с 18:00 и выходные:<br>45 ₾</p>
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-service__footer">
+                <button class="btn swiper-service__btn">Записаться на тренировку</button>
+              </div>
+            </div>
+            <div class="swiper-slide swiper-service__slide">
+              <div class="swiper-service__body">
+                <div class="swiper-service__image-wrapper">
+                  <ul class="scroll-snap-slider">
+                    <li class="scroll-snap-slide">
+                      <img alt="" src="https://picsum.photos/id/1011/1400/800" />
+                    </li>
+                    <li class="scroll-snap-slide">
+                      <img alt="" src="https://picsum.photos/id/1012/1400/800" />
+                    </li>
+                    <li class="scroll-snap-slide">
+                      <img alt="" src="https://picsum.photos/id/1013/1400/800" />
+                    </li>
+                    <li class="scroll-snap-slide">
+                      <img alt="" src="https://picsum.photos/id/1014/1400/800" />
+                    </li>
+                  </ul>
+                </div>
+                <div class="swiper-service__content">
+                  <div class="swiper-service__content-cell">
+                    <h3 class="swiper-service__title">Аренда пляжных кортов</h3>
+                  </div>
+                  <div class="swiper-service__content-cell">
+                    <p class="swiper-service__text text">Арендуй уютный и качественный волейбольный корт для игры с
+                      друзьями
+                      или тренировок. Мы предлагаем классное место для ваших игр. Аренда волейбольного корта в нашем
+                      клубе - это ваш шанс ощутить азарт и бросить вызов друзьям.</p>
+
+                    <ul class="swiper-service__list">
+                      <li class="swiper-service__list-item text">Удобное расположение</li>
+                      <li class="swiper-service__list-item text">Гибкий график</li>
+                      <li class="swiper-service__list-item text">Приятные цены</li>
+                    </ul>
+
+                    <p class="swiper-service__text text">Забронируйте свой корт сегодня и перенесите вашу игру на новый
+                      уровень!</p>
+                  </div>
+                  <div class="swiper-service__content-cell">
+                    <h6 class="swiper-service__subheading">Маленький корт</h6>
+                    <p class="text swiper-service__text">Будни утро и день:<br>40 ₾</p>
+                    <p class="text swiper-service__text">Вечер с 18:00 и выходные:<br>45 ₾</p>
+                  </div>
+                  <div class="swiper-service__content-cell">
+                    <h6 class="swiper-service__subheading">Большой корт</h6>
+                    <p class="text swiper-service__text">Будни утро и день:<br>40 ₾</p>
+                    <p class="text swiper-service__text">Вечер с 18:00 и выходные:<br>45 ₾</p>
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-service__footer">
+                <button class="btn swiper-service__btn">Записаться на тренировку</button>
+              </div>
+            </div>
+
+          </div>
+        </div>
+
       </div>
     </section>
   </main>
