change hero desktop styles

--- a/src/index.html
+++ b/src/index.html
@@ -91,7 +91,8 @@
     <section class="hero">
       <div class="container">
         <div class="hero__content">
-          <div class="hero__description hero__scale-left">
+
+          <div class="hero__description hero__top">
             <h1 class="hero__title">Школа<br>
               <span class="hero__title--black">волейбола</span>
               <br>
@@ -102,31 +103,35 @@
             </p>
             <button class="btn hero__btn">Записаться на тренировку</button>
           </div>
-          <div class="hero__picture hero__scale-right">
-            <div class="hero__picture-top">
+
+
+          <div class="hero__picture hero__picture-top">
+            <div class="hero__picture-wrapper-top">
               <img src="images/hero-2.jpg" alt="hero" class="hero__img hero__img-top">
             </div>
           </div>
-        </div>
-        <div class="hero__content">
-          <div class="hero__picture hero__scale-left">
-            <div class="hero__picture-bottom">
+
+          <div class="hero__picture-bottom">
+            <div class="hero__picture-wrapper-bottom">
               <img src="images/hero-1.jpg" alt="hero" class="hero__img hero__img-bottom">
             </div>
           </div>
-          <div class="hero__description hero__scale-right">
-            <p class="hero__text">Panam Ba - это отличная возможность
+
+          <div class="hero__description hero__bottom">
+            <p class="text">Panam Ba - это отличная возможность
               для учиться играть, тренироваться, совершенствовать и оттачивать свои спортивные навыки, а так же
               развивать
               в себе командный дух в компании новых друзей.</p>
-            <p class="hero__text">Обучаем вне зависимости
+            <p class="text">Обучаем вне зависимости
               от возраста и уровня подготовки.</p>
           </div>
+
         </div>
       </div>
     </section>
-    <section class="runline">
 
+
+    <section class="runline">
       <div class="runline__row">
         <div class="runline__line runline__line--left">
           <p class="runline__text runline__text--yellow">Крутые кемпы</p>
