fix hero style desktop

--- a/src/index.html
+++ b/src/index.html
@@ -131,7 +131,7 @@
     </section>
 
 
-    <section class="runline">
+    <section class="runline section">
       <div class="runline__row">
         <div class="runline__line runline__line--left">
           <p class="runline__text runline__text--yellow">Крутые кемпы</p>
