refactor: add fluid-value function

--- a/src/index.html
+++ b/src/index.html
@@ -88,7 +88,7 @@
 
 
   <main class="main">
-    <section class="hero">
+    <section class="hero section">
       <div class="container">
         <div class="hero__content">
 
@@ -98,7 +98,7 @@
               <br>
               в Тбилиси
             </h1>
-            <p class="hero__subtitle">
+            <p class="text hero__subtitle">
               Обучаем взрослых и детей
             </p>
             <button class="btn hero__btn">Записаться на тренировку</button>
@@ -118,7 +118,7 @@
           </div>
 
           <div class="hero__description hero__bottom">
-            <p class="text">Panam Ba - это отличная возможность
+            <p class="text hero__text">Panam Ba - это отличная возможность
               для учиться играть, тренироваться, совершенствовать и оттачивать свои спортивные навыки, а так же
               развивать
               в себе командный дух в компании новых друзей.</p>
@@ -190,6 +190,7 @@
       </div>
       </div>
     </section>
+
     <section class="section train">
       <div class="container">
         <h2 class="train__title title">тренировки</h2>
