add hover effect to contact buttons

--- a/src/index.html
+++ b/src/index.html
@@ -844,10 +844,11 @@
         <div class="contacts__footer">
           <h2 class="title contacts__footer-title">Контакты</h2>
           <ul class="contacts__list">
-            <li class="contacts__item"><a href="#" class="contacts__link">FACEBOOK</a></li>
-            <li class="contacts__item"><a href="#" class="contacts__link">TELEGRAM</a></li>
-            <li class="contacts__item"><a href="#" class="contacts__link">INSTAGRAM</a></li>
-            <li class="contacts__item"><a href="#" class="contacts__link">E-MAIL</a></li>
+            <li class="contacts__item contacts__item--facebook"><a href="#"
+                class="contacts__link contacts__link--facebook">FACEBOOK</a></li>
+            <li class="contacts__item"><a href="#" class="contacts__link contacts__link--telegram">TELEGRAM</a></li>
+            <li class="contacts__item"><a href="#" class="contacts__link contacts__link--instagram">INSTAGRAM</a></li>
+            <li class="contacts__item"><a href="#" class="contacts__link contacts__link--email">E-MAIL</a></li>
           </ul>
         </div>
       </div>
