add buttons hover effect

--- a/src/index.html
+++ b/src/index.html
@@ -113,7 +113,7 @@
             <p class="text hero__subtitle">
               Обучаем взрослых и детей
             </p>
-            <button class="btn hero__btn">Записаться на тренировку</button>
+            <button class="btn hero__btn btn__main">Записаться на тренировку</button>
           </div>
 
 
@@ -266,8 +266,8 @@
               </div>
             </div>
             <div class="card__cta">
-              <button class="card__btn btn">Записаться</button>
-              <button class="card__btn btn">Расписание</button>
+              <button class="card__btn btn btn__train">Записаться</button>
+              <button class="card__btn btn btn__train">Расписание</button>
             </div>
           </div>
 
@@ -330,8 +330,8 @@
               </div>
             </div>
             <div class="card__cta">
-              <button class="card__btn btn">Записаться</button>
-              <button class="card__btn btn">Расписание</button>
+              <button class="card__btn btn btn__train">Записаться</button>
+              <button class="card__btn btn btn__train">Расписание</button>
             </div>
           </div>
 
@@ -393,8 +393,8 @@
               </div>
             </div>
             <div class="card__cta">
-              <button class="card__btn btn">Записаться</button>
-              <button class="card__btn btn">Расписание</button>
+              <button class="card__btn btn btn__train">Записаться</button>
+              <button class="card__btn btn btn__train">Расписание</button>
             </div>
           </div>
 
@@ -457,8 +457,8 @@
               </div>
             </div>
             <div class="card__cta">
-              <button class="card__btn btn">Записаться</button>
-              <button class="card__btn btn">Расписание</button>
+              <button class="card__btn btn btn__train">Записаться</button>
+              <button class="card__btn btn btn__train">Расписание</button>
             </div>
           </div>
 
@@ -475,7 +475,7 @@
           <p class="camps__text text">И, во-вторых, тем, кто хочет поднять уровень своего спортивного мастерства и
             физических кондиций.</p>
 
-          <button class="camps__btn btn">Смотреть анонсы</button>
+          <button class="camps__btn btn btn__camps">Смотреть анонсы</button>
         </div>
         <div class="camps__image-block">
           <div class="camps__image-wrapper">
@@ -599,7 +599,7 @@
                 </div>
               </div>
               <div class="swiper-service__footer">
-                <button class="btn swiper-service__btn">Записаться на тренировку</button>
+                <button class="btn btn__main swiper-service__btn">Записаться на тренировку</button>
               </div>
             </div>
 
@@ -654,7 +654,7 @@
                 </div>
               </div>
               <div class="swiper-service__footer">
-                <button class="btn swiper-service__btn">Записаться на тренировку</button>
+                <button class="btn btn__main swiper-service__btn">Записаться на тренировку</button>
               </div>
             </div>
 
@@ -709,7 +709,7 @@
                 </div>
               </div>
               <div class="swiper-service__footer">
-                <button class="btn swiper-service__btn">Записаться на тренировку</button>
+                <button class="btn btn__main swiper-service__btn">Записаться на тренировку</button>
               </div>
             </div>
 
