--- a/src/index.html
+++ b/src/index.html
@@ -568,7 +568,6 @@
       </div>
     </section>
 
-
     <section class="service section">
 
       <div class="container">
@@ -791,8 +790,8 @@
 
             <div class="swiper-slide swiper-trainers__slide">
               <div class="swiper-trainers__image-wrapper">
-                <img alt="" src="https://picsum.photos/id/1011/1400/800" class="swiper-trainers__image" loading="lazy"
-                  width="427.6" height="335.16" />
+                <img alt="" src="images/deni.webp" class="swiper-trainers__image" loading="lazy" width="427.6"
+                  height="335.16" />
               </div>
               <div class="swiper-trainers__content">
                 <h6 class="swiper-trainers__subheading">Дэни ⚡️</h6>
@@ -803,9 +802,8 @@
             </div>
             <div class="swiper-slide swiper-trainers__slide">
               <div class="swiper-trainers__image-wrapper">
-                <img alt="" src="https://picsum.photos/id/1015/1400/800"
-                  class="swiper-trainers__image swiper-trainers__image--left" loading="lazy" width="427.6"
-                  height="335.16" />
+                <img alt="" src="images/tamaz.webp" class="swiper-trainers__image swiper-trainers__image--left"
+                  loading="lazy" width="427.6" height="335.16" />
               </div>
               <div class="swiper-trainers__content">
                 <h6 class="swiper-trainers__subheading">Тамаз Харатишвили, 24</h6>
@@ -819,8 +817,8 @@
             </div>
             <div class="swiper-slide swiper-trainers__slide">
               <div class="swiper-trainers__image-wrapper">
-                <img alt="" src="https://picsum.photos/id/1008/1400/800" class="swiper-trainers__image" loading="lazy"
-                  width="427.6" height="335.16" />
+                <img alt="" src="images/ilia.webp" class="swiper-trainers__image" loading="lazy" width="427.6"
+                  height="335.16" />
               </div>
               <div class="swiper-trainers__content">
                 <h6 class="swiper-trainers__subheading">Илья</h6>
@@ -833,9 +831,8 @@
             </div>
             <div class="swiper-slide swiper-trainers__slide">
               <div class="swiper-trainers__image-wrapper">
-                <img alt="" src="https://picsum.photos/id/1009/1400/800"
-                  class="swiper-trainers__image swiper-trainers__image--left" loading="lazy" width="427.6"
-                  height="335.16" />
+                <img alt="" src="images/Roman.webp" class="swiper-trainers__image swiper-trainers__image--left"
+                  loading="lazy" width="427.6" height="335.16" />
               </div>
               <div class="swiper-trainers__content">
                 <h6 class="swiper-trainers__subheading">Роман Гавашели</h6>
