--- a/src/index.html
+++ b/src/index.html
@@ -72,16 +72,16 @@
         <ul class="nav__list">
           <li class="nav__item-left">
             <ul class="nav__list-left">
-              <li class="nav__item nav__item-mobile"><a href="#" class="nav__link">Тренировки</a></li>
-              <li class="nav__item nav__item-mobile"><a href="#" class="nav__link">Кемпы</a></li>
-              <li class="nav__item nav__item-mobile"><a href="#" class="nav__link">Услуги</a></li>
+              <li class="nav__item nav__item-mobile"><a href="#train" class="nav__link">Тренировки</a></li>
+              <li class="nav__item nav__item-mobile"><a href="#camps" class="nav__link">Кемпы</a></li>
+              <li class="nav__item nav__item-mobile"><a href="#service" class="nav__link">Услуги</a></li>
             </ul>
           </li>
 
           <li class="nav__item-right">
             <ul class="nav__list-right">
-              <li class="nav__item"><a href="#" class="nav__link">Тренеры</a></li>
-              <li class="nav__item"><a href="#" class="nav__link">Контакты</a></li>
+              <li class="nav__item"><a href="#trainers" class="nav__link">Тренеры</a></li>
+              <li class="nav__item"><a href="#contacts" class="nav__link">Контакты</a></li>
               <li class="nav__item">
                 <div class="nav__wrapper">
                   <a href="#" class="nav__link nav__link--visible">rus</a>
@@ -202,7 +202,7 @@
       </div>
     </section>
 
-    <section class="section train">
+    <section class="section train" id="train">
       <div class="container">
         <h2 class="train__title title">тренировки</h2>
         <div class="train__content">
@@ -488,7 +488,7 @@
         </div>
     </section>
 
-    <section class="section camps">
+    <section class="section camps" id="camps">
       <div class="container camps__container">
         <div class="camps__content">
           <h2 class="camps__title title">кемпы</h2>
@@ -567,7 +567,7 @@
       </div>
     </section>
 
-    <section class="service section">
+    <section class="service section" id="service">
 
       <div class="container">
 
@@ -764,7 +764,7 @@
 
     </section>
 
-    <section class="section trainers">
+    <section class="section trainers" id="trainers">
       <div class="container">
         <h2 class="title trainers__title">наши тренеры</h2>
 
@@ -866,7 +866,7 @@
     </section>
 
 
-    <section class="section contacts">
+    <section class="section contacts" id="contacts">
       <div class="container">
         <h2 class="title contacts__title">где нас найти</h2>
         <div class="contacts__body">
