add scroll page block when menu is opened

--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
       </div>
 
       <div class="toggle-menu">
-        <input type="checkbox" />
+        <input type="checkbox" class="toggle-menu__input" />
         <span></span>
         <span></span>
         <span></span>
