add border to map

--- a/src/index.html
+++ b/src/index.html
@@ -873,7 +873,7 @@
           <div class="contacts__map">
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7082.067583661589!2d44.73265399382638!3d41.728229978774536!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4044736e78cab5d1%3A0x613c7661b35d2e7b!2sPanam-Ba%20School%20Beach%20volleyball!5e0!3m2!1sen!2sge!4v1706530760266!5m2!1sen!2sge"
-              width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy"
+              width="100%" height="500" style="border:1px solid black;" allowfullscreen="" loading="lazy"
               referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
           <div class="contacts__content">
