--- a/src/index.html
+++ b/src/index.html
@@ -131,11 +131,18 @@
           <div class="hero__description hero__bottom">
             <p class="text hero__text">Panam Ba - первая любительская школа по пляжному и классическому волейболу в
               Грузии. Наши филиалы открыты в Тбилиси и Батуми.</p>
-            <p class="text">Обучаем мужчин и женщин разных возрастов и с разным уровнем подготовки. Проводим детские
+            <p class="text">Обучаем мужчин и женщин разных возрастов и с разным уровнем подготовки. Проводим
+              детские
               тренировки от 8 до 16 лет.</p>
-            <p class="text">У нас вы сможете усовершенствовать и отточить свои спортивные навыки, а также развить в себе
+            <p class="text">У нас вы сможете усовершенствовать и отточить свои спортивные навыки, а также
+              развить в себе
               командный дух в компании новых друзей.</p>
-            <p class="text">Проводим турниры, кемпы, корпоративные игры.</p>
+            <p class="text hero__text hero__text--stroke" id="stroke">Проводим турниры, кемпы, корпоративные игры.
+              <svg xmlns="http://www.w3.org/2000/svg" width="374" height="86" fill="none" class="hero__svg">
+                <path class="hero__path" stroke="#FFE600" stroke-linecap="round" stroke-width="3"
+                  d="M243.787 6.625c-50.87 0-102.197-7.472-153.1-3.421-12.965 1.032-26.165 3.205-39.1 4.84-12.276 1.552-24.674 7.497-36.639 10.843-4.6 1.287-7.066 9.371-8.349 13.811-1.879 6.508-2.559 22.246 3.21 26.01 12.132 7.915 27.117 11.15 40.903 13.746 24.497 4.615 50.651 4.119 75.439 4.26 42.802.243 56.25-4.26 99.053-4.26 19.62 0 63.423 4.26 83.044 4.26 14.927 0 33.847 1.8 48.026-4.26 4.563-1.95 14.377-14.877 15.027-20.459.887-7.63-.099-15.246-6.023-19.297-10.891-7.447-9.831-8.008-21.511-13.811-12.51-6.215-36.94-8.737-50.527-10.197-23.255-2.499-53.596 1.722-76.841 0-41.711-3.091-84.223-9.266-126.132-5.292-16.11 1.527-34.613 2.91-49.732 9.1-6.708 2.746-17.316 1.96-21.863 8.067-4.24 5.694-8.824 11.347-11.892 17.942-2.727 5.86-5.761 14.22-5.106 20.91.96 9.805 14.92 15.096 21.803 17.297 9.892 3.163 20.454 3.157 30.632 4.517 10.877 1.454 21.478 2.066 32.434 2.066 3.941 0 17.704 2.645 18.86-2.324" />
+              </svg>
+            </p>
           </div>
 
         </div>
@@ -143,7 +150,7 @@
     </section>
 
 
-    <section class="runline section">
+    <section class="runline section" id="runline">
       <div class="runline__row">
         <div class="runline__line runline__line--left">
           <p class="runline__text runline__text--yellow">Крутые кемпы</p>
